# The_Talking_Heads

./: .coveragerc  .gitattributes  .gitignore  AGENT_ONBOARDING_PROMPT.md  AGENT_START_PROMPT.txt  API_ISSUES.md  API_KEYS_SETUP.md  API_STATUS.md  API_TEST_RESULTS.md  API_VERSION_POLICY.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CREATE_GITHUB_REPO.md  DID_ACCOUNT_SETTINGS_GUIDE.md  DID_ACTION_REQUIRED.md  DID_CORRECT_INSTRUCTIONS.md  DID_EXACT_CLICKS.md  DID_SIMPLE_CHECK.md  DID_TRIAL_PLAN_ANALYSIS.md  DID_TROUBLESHOOTING_STEP_BY_STEP.md  DID_VISUAL_GUIDE.md  FINAL_REPORT.md  GITHUB_SETUP.md  HEYGEM_ISSUE_REPORT.md  IMPLEMENTATION_ROADMAP.md  LICENSE  NorthStar.md  PROJECT_SETUP.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICK_START_GITHUB.md  QUICK_START_SMOKE_TEST.md  README.md  README_SMOKE_TEST.md  SMOKE_TEST_DECISION.md  START_HERE.md  UNICODE_FIX_MEMORIZED.md  WINDOWS_UNICODE_FIX.md  ffprobe_verification.json  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md
config/: config.yaml  personas.yaml  scenes.yaml
docs/: 3DDFA_BUILD_COMPLETE.md  3DDFA_TO_AUDIO2FACE_WORKFLOW.md  3DDFA_USD_CONVERSION_SUCCESS.md  3D_FACE_RECONSTRUCTION_FROM_2D_IMAGES.md  3D_RECONSTRUCTION_QUICK_START.md  3D_RECONSTRUCTION_RESULTS.md  3D_RECONSTRUCTION_STATUS.md  3D_RECONSTRUCTION_TEST_RESULTS.md  API_FIXES_SUMMARY.md  AUDIO2FACE_3D_ASSETS_GUIDE.md  AUDIO2FACE_GITHUB_SETUP.md  AUDIO2FACE_INSTALLATION.md  AUDIO2FACE_INSTALLATION_2025.md  AUDIO2FACE_INSTALLATION_STEPS.md  AUDIO2FACE_INTEGRATION_COMPLETE.md  AUDIO2FACE_INTEGRATION_STATUS.md  AUDIO2FACE_SDK_BUILD_COMPLETE.md  AUDIO2FACE_SDK_BUILD_PREREQUISITES.md  AUDIO2FACE_SDK_BUILD_STATUS.md  AUDIO2FACE_SDK_INTEGRATION.md  AUDIO2FACE_SDK_STATUS.md  AUDIO2FACE_SDK_VS_OMNIVERSE_COMPARISON.md  AUDIO2FACE_SERVER_STATUS.md  AUDIO2FACE_SETUP.md  AUDIO2FACE_SETUP_GUIDE.md  AUDIO2FACE_VS_2D_HEADSHOT_TOOLS.md  AVATAR_API_ALTERNATIVES.md  BUILD_TOOLS_INSTALLATION_SUMMARY.md  COQUI_TOS_ACCEPTANCE.md  CURSORAI_CONNECTION_ERROR_REPORT.md  DECA_BUILD_STATUS.md  DEPENDENCY_CONFLICTS.md  DID_500_ERROR_SOLUTION.md  DID_AUTHENTICATION_INVESTIGATION.md  DID_AUTHENTICATION_SOLUTION.md  DID_CREDENTIAL_CHECK_GUIDE.md  DID_DASHBOARD_CHECKLIST.md  DID_SETUP_SUMMARY.md  DID_TROUBLESHOOTING.md  DOWNLOAD_FLAME_MODEL.md  (+36 more)
scripts/: MONITORING.md  _unicode_fix_template.py  accept_coqui_tos.py  auto_monitor_and_fix.py  build_3ddfa.ps1  build_3ddfa_manual.ps1  build_3ddfa_simple.ps1  build_deca.ps1  (+93 more)
(+90 files in other folders)
